# PBi-Explorer

./: .env.example  .gitignore  AUDIT_PIPELINE_SPEC.md  Caddyfile  Dockerfile  Makefile  PLAN.md  README.md  deploy.sh  docker-compose.proxy.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: cli.py  worker.py
app/audit/: admin_log.py
app/auth/: clouds.py  consent.py  local.py  msal_client.py  oidc.py
app/core/: config.py  logging.py  metrics.py  timeutils.py
app/db/: bootstrap.py  engine.py  repo.py
app/ingest/: dedup.py  graph.py  mgmt.py  normalizer.py  runner.py
app/mappings/: canonical_instance.yml  canonical_operations.yml  default_graph_directoryAudits.yml  default_graph_provisioning.yml  default_graph_signIns.yml  default_mgmt_AzureActiveDirectory.yml  default_mgmt_Exchange.yml  default_mgmt_General.yml  default_mgmt_SharePoint.yml
app/web/: __init__.py  __main__.py  deps.py
app/web/pages/: admin_events.py  config.py  discover.py  health.py  login.py  m365.py  mapping.py  runs.py
app/web/templates/: admin_events.html  base.html  config.html  discover.html  login.html  m365.html  mapping.html  runs.html  runs_detail.html
tests/: conftest.py  test_bootstrap.py  test_clouds.py  test_dedup.py  test_normalizer.py
tests/fixtures/: graph_directoryAudits_sample.json
