[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m365ai"
version = "0.1.0"
description = "Microsoft 365 audit data ingestor"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "starlette>=0.36",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "cryptography>=42",
  "structlog>=24",
  "httpx>=0.27",
  "msal>=1.27",
  "argon2-cffi>=23",
  "authlib>=1.3",
  "itsdangerous>=2.1",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10",
  "pyyaml>=6.0",
  "jsonpath-ng>=1.6",
  "prometheus-client>=0.20",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "respx>=0.20",
  "ruff>=0.4",
  "mypy>=1.10",
  "freezegun>=1.4",
  "types-PyYAML",
]

[project.scripts]
m365ai = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC", "C4", "PIE", "PT", "RET", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["msal.*", "apscheduler.*", "jsonpath_ng.*", "authlib.*", "argon2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires a real MariaDB"]
